Update nfc module with winnie board
